--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!-- Una pagina HTML es un conjunto de etiquetas que definen los elementos  -->
+
 <html>
     <head>
-        <title>/Mi Biografia Personal/<title>
+        <title>Mi Biografia Personal</title>
         <link rel="stylesheet" href="estilo.css">
     </head>
     <body style="background-color:#b4f182;">
         <div class="contenedor">
             <section class="Izquierda">
                 <h1>Maria Camila Velez Dueñas</h1>
-                <img src="Imagen/img.png" width="400" height="400" />
+                <img src="Imagen/foto.png" width="310" height="400" />
             </section>
             <section class="Derecha">
                 <h1>Biografia Personal</h1>
